--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="overlay">
                 <h1>Geografeur</h1>
                 <p>Bienvenue sur Geografeur ! Réussirez-vous à faire le meilleur score ?</p>
-                <button class="start-button" onclick="window.location.href='index.html'">Commencer</button>
+                <button class="start-button" onclick="window.location.href='game.html'">Commencer</button>
             </div>
         </div>
     </div>
